--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/public/favicon.ico" />
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#3367D6" />
     <title>RoomieMatch</title>
   </head>
   <body>
